.jjconflict-base-1/cynic-codegen/src/fragment_derive/snapshots/cynic_codegen__fragment_derive__tests__feature_flagging.snap
---
source: cynic-codegen/src/fragment_derive/tests.rs
expression: "format_code(format!(\"{}\", tokens))"
---
#[automatically_derived]
impl cynic::QueryFragment for MyQuery {
    type SchemaType = schema::Query;
    type VariablesFields = ();
    const TYPE: Option<&'static str> = Some("Query");
    fn query(
        mut builder: cynic::queries::SelectionBuilder<'_, Self::SchemaType, Self::VariablesFields>,
    ) {
        #![allow(unused_mut)]
        let mut field_builder = builder
            .select_field::<schema::__fields::Query::__typename, <String as cynic::schema::IsScalar<
                <schema::__fields::Query::__typename as cynic::schema::Field>::Type,
            >>::SchemaType>();
        if builder.is_feature_enabled("2018") {
            let mut field_builder = builder . select_field :: < schema :: __fields :: Query :: filteredPosts , < Vec < BlogPostOutput > as cynic :: QueryFragment > :: SchemaType > () ;
            <Vec<BlogPostOutput> as cynic::QueryFragment>::query(field_builder.select_children());
        }
    }
    fn name() -> Option<std::borrow::Cow<'static, str>> {
        Some(std::borrow::Cow::Borrowed("MyQuery"))
    }
}
#[automatically_derived]
impl<'de> cynic::serde::Deserialize<'de> for MyQuery {
    fn deserialize<__D>(deserializer: __D) -> Result<Self, __D::Error>
    where
        __D: cynic::serde::Deserializer<'de>,
    {
        #[derive(cynic :: serde :: Deserialize)]
        #[serde(field_identifier, crate = "cynic::serde")]
        #[allow(non_camel_case_types)]
        enum __FragmentDeriveField {
            #[serde(rename = "__typename")]
            __typename,
            #[serde(rename = "filteredPosts")]
            filteredPosts,
            #[serde(other)]
            __Other,
        }
        struct Visitor<'de> {
            marker: ::core::marker::PhantomData<MyQuery>,
            lifetime: ::core::marker::PhantomData<&'de ()>,
        }
        impl<'de> cynic::serde::de::Visitor<'de> for Visitor<'de> {
            type Value = MyQuery;
            fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
                formatter.write_str("struct MyQuery")
            }
            fn visit_map<V>(self, mut __map: V) -> Result<Self::Value, V::Error>
            where
                V: cynic::serde::de::MapAccess<'de>,
            {
                let mut __typename = None;
                let mut filteredPosts = None;
                while let Some(__key) = __map.next_key()? {
                    match __key {
                        __FragmentDeriveField::__typename => {
                            if __typename.is_some() {
                                return Err(cynic::serde::de::Error::duplicate_field("__typename"));
                            }
                            __typename = Some(__map.next_value()?);
                        }
                        __FragmentDeriveField::filteredPosts => {
                            if filteredPosts.is_some() {
                                return Err(cynic::serde::de::Error::duplicate_field(
                                    "filteredPosts",
                                ));
                            }
                            filteredPosts = Some(__map.next_value()?);
                        }
                        __FragmentDeriveField::__Other => {
                            __map.next_value::<cynic::serde::de::IgnoredAny>()?;
                        }
                    }
                }
                let __typename = __typename
                    .ok_or_else(|| cynic::serde::de::Error::missing_field("__typename"))?;
                let filteredPosts = filteredPosts.unwrap_or_default();
                Ok(MyQuery {
                    __typename,
                    filteredPosts,
                })
            }
        }
        const FIELDS: &'static [&str] = &["__typename", "filteredPosts"];
        deserializer.deserialize_struct(
            "MyQuery",
            FIELDS,
            Visitor {
                marker: ::core::marker::PhantomData,
                lifetime: ::core::marker::PhantomData,
            },
        )
    }
}

